fixed up spacing issues w header

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ul{
     margin-top:0px;
     margin-bottom:0px;
     margin-left:0%;
-    
+    padding-left:0
 }
 
 .home{
@@ -113,7 +113,7 @@ nav ul a:hover li{
 nav{
     
     border-top:1px solid #ebebeb;
-    padding-left:7%;
+    padding-left:5%;
     margin-top:30px
 }
 
@@ -123,7 +123,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 3% 20px 3%;
+    padding: 20px 5% 20px 5%;
 }
 
 .marketLinks a {
@@ -142,9 +142,11 @@ nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 3% 0 3%;
+    padding: 30px 5% 0 5%;
     border-top:1px solid #ebebeb
 }
+
+
 
 .home-footer{
 display:flex;
@@ -160,14 +162,14 @@ padding-left:30px
 }
 
 .filler{
-    width:50px
+    width:20px !important
 }
 
 .slogan {
     background-color:#426197;
     width:100%;
     color:white;
-    padding-left:7%; 
+    padding-left:5%; 
     height:50px;
     display:flex;
     align-items: center;
